<resources>
    <string name="app_name">SupportLibrary</string>

    <!---->
    <string name="label_daynight_theme">DayNight Theme</string>
    <string name="desc_daynight_theme">23.2新增主题</string>

    <string name="mode_night_yes">MODE_NIGHT_YES</string>
    <string name="mode_night_no">MODE_NIGHT_NO</string>
    <string name="mode_night_auto">MODE_NIGHT_AUTO</string>


    <!---->
    <string name="label_custom_tabs">Chrome Custom Tabs</string>
    <string name="desc_custom_tabs">保持当前APP的外观，无缝过渡到web</string>

    <string name="label_custom_tab_settings">CustomTabsSettings</string>


    <string name="label_add_action_button">Add Action Button</string>
    <string name="label_add_menus">Add Menus</string>
    <string name="label_show_title">Show title</string>
    <string name="label_custom_back_button">Custom back button</string>
    <string name="label_add_toolbar_color">Add toolbar Color</string>
    <string name="label_auto_hide_appbar">Auto-hide AppBar</string>
    <string name="label_add_tool_bar_item">Add ToolbarItem</string>
    <string name="label_set_secondary_toolbar_color">Set SecondaryToolbar Color</string>
    <string name="label_add_start_animation">Add Start Animation</string>
    <string name="label_add_exit_animation">Add Exit Animation</string>

    <string name="open_custom_tab">Open Custom Tab</string>
    <string name="default_url">http://blog.csdn.net/crazy1235</string>


    <!--bottomSheet-->
    <string name="label_bottom_sheet">Bottom Sheets</string>
    <string name="desc_bottom_sheet">底部划出视图</string>
    <string name="bottom_sheet_dialog">Bottom Sheet Dialog</string>


    <!--vector drawable-->
    <string name="label_vector_drawable">Vector Drawable</string>
    <string name="desc_vector_drawable">@string/label_vector_drawable</string>


    <!--navigation view-->
    <string name="label_navigation_view">NavigationView</string>
    <string name="desc_navigation_view">侧滑栏</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_drawer_header">jacksen</string>
    <string name="blog_url">https://github.com/crazy1235/SupportLibraryDemo</string>

    <string name="menu_drawer_item1">menu1</string>

    <string name="menu_drawer_group1">group1</string>
    <string name="menu_drawer_item2">menu2</string>
    <string name="menu_drawer_item3">menu3</string>

    <string name="menu_drawer_group2">group2</string>
    <string name="menu_drawer_item4">menu4</string>
    <string name="menu_drawer_item5">menu5</string>

    <string name="action_settings">Settings</string>

    <!---->
    <string name="title_snack_bar">this is a snack bar.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="transition_img">beauty</string>
    <string name="transition_fab">fab</string>

    <!-- bottom navigation-->

    <string name="title_activity_bottom_navi_view">BottomNavigationView</string>
    <string name="menu_recents">Recents</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_nearby">Nearby</string>
    <string name="menu_navigation">Navigation</string>


</resources>
