<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_drawer_item1"
            android:icon="@drawable/ic_arrow_back"
            android:title="@string/menu_drawer_item1" />

        <item
            android:id="@+id/menu_drawer_item2"
            android:icon="@drawable/ic_favorite_border_red_400_18dp"
            android:title="@string/menu_drawer_item2" />

        <item
            android:id="@+id/menu_drawer_item3"
            android:icon="@drawable/ic_grade_white_18dp"
            android:title="@string/menu_drawer_item3" />

    </group>

    <item
        android:id="@+id/menu_drawer_group1"
        android:title="@string/menu_drawer_group1">

        <menu>
            <item
                android:id="@+id/menu_drawer_item4"
                android:icon="@drawable/ic_done_black_18dp"
                android:title="@string/menu_drawer_item4" />

            <item
                android:id="@+id/menu_drawer_item5"
                android:icon="@drawable/ic_help_outline_black_18dp"
                android:title="@string/menu_drawer_item5" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_custom_tab"
        android:icon="@drawable/ic_open_in_browser_white_24dp"
        android:title="@string/label_custom_tabs" />


    <item
        android:id="@+id/menu_bottom_sheet"
        android:icon="@drawable/ic_vertical_align_top_white_24dp"
        android:title="@string/label_bottom_sheet" />
</menu>