<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CustomTabsSettingsDemo">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding20">

        <EditText
            android:id="@+id/test_url_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:text="@string/default_url" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/view_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_add_action_button"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <CheckBox
                android:id="@+id/set_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_add_menus"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <CheckBox
                android:id="@+id/custom_add_menus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_show_title"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <CheckBox
                android:id="@+id/show_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_custom_back_button"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <CheckBox
                android:id="@+id/custom_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--add Toolbar Color-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_add_toolbar_color"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <CheckBox
                android:id="@+id/set_toolbar_color_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_auto_hide_appbar"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <CheckBox
                android:id="@+id/auto_hide_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--Tool bar Item-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_add_tool_bar_item"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <CheckBox
                android:id="@+id/add_toolbaritem_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--setSecondaryToolbarColor-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_set_secondary_toolbar_color"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <CheckBox
                android:id="@+id/secondary_toolbar_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--setStartAnimations-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_add_start_animation"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <CheckBox
                android:id="@+id/start_animations_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--setExitAnimations-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_add_exit_animation"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <CheckBox
                android:id="@+id/exit_animations_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/start_custom_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_vertical_margin"
            android:text="@string/open_custom_tab"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>