<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0EEE0"
        android:orientation="vertical"
        tools:context="com.jacksen.supportlibrarydemo.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="setModeNightNo"
            android:text="@string/mode_night_no" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:onClick="setModeNightYes"
            android:text="@string/mode_night_yes" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:onClick="setModeNightAuto"
            android:text="@string/mode_night_auto" />

        <Button
            android:id="@+id/test_custom_tab_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:text="@string/btn_test_tab" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/peek_height"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <include layout="@layout/layout_bottom_sheet" />

    </RelativeLayout>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_backup_white_36dp"
        app:layout_anchor="@id/bottom_sheet"
        app:layout_anchorGravity="right|top" />


</android.support.design.widget.CoordinatorLayout>

